Switch self reporting to V2
