# src/tollbit/_apis/models/__init__.py
@@ -12,12 +12,10 @@ from ._generated.openapi_tollbit_apis import (
     PropertyPage,
     PagedSearchResultResponse,
     SearchResult,
+    SelfReportLicensePermission,
+    SelfReportUsage,
+    SelfReportUsageReceipt,
+    SelfReportContentUsageRequest,
+    SelfReportContentUsageResponse,
 )
 from ._hand_rolled.old_subdomain_models import ContentRate, RatePrice, RateLicenseResponse
-
-from ._hand_rolled.self_report_usage import (
-    DeveloperSelfReportRequest,
-    DeveloperTransactionResponse,
-    SelfReportUsage,
-    SelfReportLicensePermission,
-)
